--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -1,5 +1,6 @@
 .card {
     position: relative;
+	align-self: stretch;
 }
 
 .card img {
@@ -12,11 +13,28 @@
 	width: 100%;
 }
 
+/* card front */
+
 .card .front {
 	transform: rotateY(90deg);
 	position: absolute;
+	transition: all ease-in 0.2s;
 }
 
 .flipped .front {
 	transform: rotateY(0deg);
+	transition-delay: 0.2s;
+}
+
+/* card back */
+
+.card .back {
+	transition: all ease-in 0.2s;
+	transition-delay: 0.2s;
+	cursor: pointer;
+}
+
+.flipped .back {
+	transform: rotateY(90deg);
+	transition-delay: 0s;
 }
